Added About Us content

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./exercise2.css">
-    <title>Final project</title>
+    <title>Reality 101 Failure</title>
   </head>
   <body>
     <div id="wrapper">
-      
+      <h1>Reality 101 Failure</h1>
     </div>
   </body>
 </html>
+
+<div id="About">
+    <h2><bold><blockquote>Meetthe Procrastinators</blockquote></bold></h2>
+    
+    <div class="row">
+    <div class='col-md-4'>
+    	<div class='text-center'>
+
+      <img src='images/person.jpg' class="img-circle">
+      <p>Bella likes going out dancing all night and then complaining about being tired the next day while trying to get work done. When she says she couldn't get something done because she had too many other commitments, it's probably true, since she is a classic overcommitter. But that could also probably be solved by learning some better time management.</small>
+    </div>
+    </div>
+    <div class='col-md-4'>
+    	<div class="text-center">
+      <img src='images/person.jpg' class="img-circle">
+      <p>Bonolo ..... </small>
+    </div>
+    </div>
