--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./exercise2.css">
-    <title>Final project</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <title>Reality-101-Failure</title>
+    <meta name="description" content= " Reality-101-Failure is a website about the experiences of two serial (coding) procrastinators, and their advice on how NOT to learn coding... ">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="wrapper">
-      
     </div>
+    <h1>"Reality 101 Failure"</h1>
+    <h2>"I didn't do my coding project because..."</h2>
+    <ul>
+      <li></li>
+    </ul>
+
+    <h3>Five steps to how NOT to learn how to code</h3>
+    <ul>1. </ul>
+
   </body>
+
+
 </html>
