--- a/index.html
+++ b/index.html
@@ -35,3 +35,4 @@
       <p>We don't actually have a dog, but we figured if this was a website about procrastinating it should probably include a dog </small>
     </div>
     </div>
+    <h3> test </h3>
