--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
     <div id="wrapper">
 
   <div id="About">
-    <h2><bold><blockquote>Meetthe Procrastinators</blockquote></bold></h2>
+    <h2><bold><blockquote>Meet the Procrastinators</blockquote></bold></h2>
 
     
     <div class="row">
     <div class='col-md-4'>
     	<div class='text-center'>
-
       <img src='Bella.jpg' class="img-circle">
-      <p>Bella likes going out dancing all night and then complaining about being tired the next day while trying to get work done. When she says she couldn't get something done because she had too many other commitments, it's probably true, since she is a classic overcommitter. But that could also probably be solved by learning some better time management.</small>
+      <p>Bella likes going out dancing all night and then complaining about being tired the next day while trying to get work done. When she says she couldn't get something done because she had too many other commitments, it's probably true, since she is a classic overcommitter. But that could also probably be solved by learning some better time management.</p>
     </div>
     </div>
     <div class='col-md-4'>
     	<div class="text-center">
       <img src='Bonolo.jpg' class="img-circle">
-      <p>Bonolo ..... </small>
+      <p>Bonolo ..... </p>
     </div>
+  </div>
      <div class='col-md-4'>
       <div class="text-center">
       <img src='Dog.jpg' class="img-circle">
-      <p>We don't actually have a dog, but we figured if this was a website about procrastinating it should probably include a dog </small>
+      <p>We don't actually have a dog, but we figured if this was a website about procrastinating it should probably include a dog </p>
     </div>
+  </div>
   </body>
