--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <div class='col-md-4'>
       <div class="text-center">
       <img src='Dog.jpg' class="img-circle">
-      <p>We don't actually have a dog, but we figured if this was a website about procrastinating it should probably include a dog </p>
+      <p>We don't actually have a dog, but we figured if this was a website about procrastinating it should probably include a dog. We wish we had a dog, though considering our questionable track record with responsibility, maybe it is best we don't. </p>
     </div>
   </div>
   </body>
