--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>Reality-101-Failure</title>
-    <meta name="description" content= " Reality-101-Failure is a website about the experiences of two serial (coding) procrastinators, and their advice on how NOT to learn coding... ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="wrapper">
+    <h1>Reality 101 Failure</h1>
+    <h6>Reality 101 Failure is a website about the experiences of two serial (coding) procrastinators, and their advice on how NOT to learn coding... </h6>
 
   <div id="About">
     <h2><bold><blockquote>Meet the Procrastinators</blockquote></bold></h2>
