--- a/index.html
+++ b/index.html
@@ -12,21 +12,47 @@
     <h1>Reality 101 Failure</h1>
     <h6>Reality 101 Failure is a website about the experiences of two serial (coding) procrastinators, and their advice on how NOT to learn coding... </h6>
 
+  <div id="Excuses">
+    <h2>I didn't to my homework because...</h2>
+    <p><ul>
+      <li>My dog ate my homework</li>
+      <li>I took my goldfish for a walk</li>
+      <li>I promise I did it, my laptop just crashed</li>
+      <li>A burglar stole my backpack</li>
+      <li>I went to do it, but then on the way got sidetracked because my mother baked a cake</li>
+      <li>I meant to do it, I really did, but my shift at the homeless shelter went over</li>
+    </ul> 
+    </p>
+  </div>
+
+  <div id="5steps">
+    <h2>Five Steps to Faking How to Code</h2>
+    <p><ol>
+      <li>Use Google</li>
+      <li>Rely on your equally intelligent partner, who may have done their work...safety in numbers!</li>
+      <li>Cry</li>
+      <li>Pray</li>
+      <li>Try, Try, Again!</li>
+      
+    </ol>
+    </p>
+  </div>
+
   <div id="About">
-    <h2><bold><blockquote>Meet the Procrastinators</blockquote></bold></h2>
+    <h2>Meet the Procrastinators</h2>
 
     
     <div class="row">
     <div class='col-md-4'>
     	<div class='text-center'>
       <img src='Bella.jpg' class="img-circle">
-      <p>Bella likes going out dancing all night and then complaining about being tired the next day while trying to get work done. When she says she couldn't get something done because she had too many other commitments, it's probably true, since she is a classic overcommitter. But that could also probably be solved by learning some better time management.</p>
+      <p>Bella likes going out dancing all night and then complaining about being tired the next day while trying to get work done. When she says she couldn't get something done because of work, it's probably true, since she is a classic overcommitter. But that could also probably be solved by learning some better time management.</p>
     </div>
     </div>
     <div class='col-md-4'>
     	<div class="text-center">
       <img src='Bonolo.jpg' class="img-circle">
-      <p>Bonolo ..... </p>
+      <p>Bonolo is a serial procrastinator, wannabe tech genius, but relies too much on Google. Also she saw Bella at Afrobeats Party last Saturday, so we all know why that Sunday meeting fell through. </p>
     </div>
   </div>
      <div class='col-md-4'>
